--- a/application/classes/Sdk/mrozk/changes
+++ b/application/classes/Sdk/mrozk/changes
@@ -7,3 +7,7 @@ application/classes/InsalesApi.php  изменить  $api_key, $secret_key
 Изменить /home/mrozk/git/insales/application/classes/Sdk/application/classes/DDelivery/DataBase/Order.php вставку и обновление в БД (insalesuser_id)
 Изменить /home/mrozk/git/insales/application/classes/Sdk/application/classes/DDelivery/DDeliveryUI.php initOrder
 /home/mrozk/git/insales/application/classes/Sdk/application/classes/DDelivery/Order/DDeliveryOrder.php атрибут
+
+/home/mrozk/git/insales/html/js/ddelivery.js   --   удалить строчку про window.params
+
+
